blocks/recipes.css
.recipes {
  background: #ffffff url(../images/background_recipes.svg) center/cover
    no-repeat;
  margin: 0;
  box-sizing: border-box;
}

.recipes__title {
  padding-top: 100px;
  margin: 0 auto 24px 80px;
  font-weight: 500;
  font-size: 44px;
  line-height: 52px;
}

.recipes__subtitle {
  max-width: 438px;
  margin: 0 auto 80px 80px;
  font-family: "Noto serif", Times New Roman, serif;
  font-size: 20px;
  line-height: 30px;
}

.recipes__videos {
  box-sizing: border-box;
  width: 1000px;
  margin: 0 auto 215px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  row-gap: 24px;
  column-gap: 40px;
}

.recipes__iframe {
  margin: 0;
  padding: 0;
  border: none;
  width: 480px;
  height: 273px;
}

.recipes__video-caption {
  display: flex;
  justify-content: space-between;
  margin: 0;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
}

